  For example: "table field height"=50 means everything on the table is raised by 50 units. This allows for real ball tunnels and more.

- new rubber element
  rubber object can be rotated around the X/Y/Z axis and shown in the editor if the checkbox "Show In Editor" is checked

- spinners are mesh based. If the spinner bracket isn't the right one disable the "Show Bracket" settings and you will only see the spinner plate.
  
- kickers are mesh based. In the kicker settings you can set "Fall through" so that if a ball hits a kicker(hole) the ball will fall through the 
  surface which is attached to it. This only works if the wall is higher than the playfield, it won't work if the hole is on the playfield.
  
- gates are mesh based. Another option was added to the gate element "Two Way" if set the ball can roll from both sides through the gate

- add material editor
  
  -> quick and basic explanation:
     - First of all select if you want to design a metal material (steel, gold, silver, aluminium, etc)
       or any other one (plastic, wood, rubber, etc)

     - Then select the base color of your material
       (note that this can/will be modulated by the (optional) image on your object(s) later-on,
        so if you need your object image to look as true to the original as possible, set the base color to full white,
        otherwise you can also just use the base color to change the brightness or colors of the object image)

     - If you selected a non-metal material you can now in addition add some subtle reflectivity via the glossy layer color
       (otherwise simply set it to full black, but leave at grey to full white for a more natural behavior)

     - Then select the shininess of your material (0.0 means very very dull reflections, 1.0 means perfect mirror-like reflections),
       of course this only has an effect on metals or if you used the glossy layer
